[f_mall_10765][侯庭飞]在售商品数据导出

--- a/weapp/mall/templates/mall/editor/offshelf_products.html
+++ b/weapp/mall/templates/mall/editor/offshelf_products.html
@@ -191,10 +191,14 @@
 {% endverbatim %}
 <script type="text/javascript">
 $(document).ready(function() {
+	var woid = {{ request.manager.id }};
+	var export2data = {{export2data|safe}};
 	var view = new W.view.mall.ProductListView({
 		el: '.xui-productsPage',
 		type: 'offshelf',
-		mall_type: '{{ mall_type }}'
+		mall_type: '{{ mall_type }}',
+		export2data:export2data,
+		woid:woid
 	});
 	view.render();
 });
