--- a/weapp/mall/templates/mall/editor/onshelf_products.html
+++ b/weapp/mall/templates/mall/editor/onshelf_products.html
@@ -21,6 +21,8 @@
 			</label>
 			<a href="javascript:void(0);" class="btn btn-default ml10 xa-batchOffshelf">批量下架</a>
 			<a href="javascript:void(0);" class="btn btn-default ml10 xa-batchDelete">彻底删除</a>
+			<a href="javascript:void(0);" class="btn fr btn-default xa-export mr20 " id="export_data_file">导出结果</a>
+
 			{% if not mall_type %}
 			<a href="/mall2/product/" class="btn btn-success xui-addProductBtn ml10 xa-addProduct fr">
 				<span style="padding-right:5px;"><img src="/static_v2/img/editor/plusOpcity.png"></span>
@@ -188,12 +190,19 @@
 {% endverbatim %}
 <script type="text/javascript">
 $(document).ready(function() {
+
+	var woid = {{ request.manager.id }};
+	console.log('1111',{{ request.manager.id }});
+	// console.log('1111',${request.manager.id} );
+
 	var view = new W.view.mall.ProductListView({
 		el: '.xui-productsPage',
 		type: 'onshelf',
 		low_stocks: '{{high_stocks}}',  //支持从首页店铺提醒“库存不足商品”过来的请求，这过来的请求是0~0，所以这块就直接用high_stocks了 duhao 20150925
 		high_stocks: '{{high_stocks}}',
-		mall_type: '{{ mall_type }}'
+		mall_type: '{{ mall_type }}',
+		export2data:'{{export2data}}',
+		woid:woid
 	});
 	view.render();
 });
