--- a/weapp/market_tools/tools/distribution/css/m_weixin_style_v1.css
+++ b/weapp/market_tools/tools/distribution/css/m_weixin_style_v1.css
@@ -175,7 +175,7 @@ html {
 .xui-promption-wrapper .xui-qrCode-content {
     position: relative;
 	width: 100%;
-    background: url('../styles/images/promotion-bg.png');
+    background: url('/markettools_static/distribution/styles/images/promotion-bg.png');
     background-size: 120px;
 }
 .xui-promption-wrapper .xui-qrCode-bg {
@@ -206,7 +206,7 @@ html {
     left: 50%;
     width: 14%;
     height: 6%;
-    background: url("../styles/images/promotion-icon.png") no-repeat;
+    background: url("/markettools_static/distribution/images/promotion-icon.png") no-repeat;
     background-size: 55%;
     -webkit-transform: translate(-28%, 0);
     -moz-transform: translate(-28%, 0);
@@ -288,7 +288,7 @@ html {
     vertical-align: middle;
     width: 47px;
     height: 47px;
-    background: #fff url('../styles/images/myPromotion-icon-person.png') no-repeat;
+    background: #fff url('/markettools_static/distribution/images/myPromotion-icon-person.png') no-repeat;
     background-size: 47px;
 }
 .xui-myPromption-wrapper .xui-returnCommission .xui-message span {
@@ -368,13 +368,20 @@ html {
     text-align: center;
     color: #fff;
 }
-.xui-myPromption-wrapper .xui-returnCommission .xui-btn-return a {
+.xui-myPromption-wrapper .xui-returnCommission .xui-btn-return .xui-a-valid-blue {
     display: inline-block;
     padding: 12px 18px;
     border: 1px solid #008cd5;
     border-radius: 5px;
     box-shadow: 1px 1px 5px rgba(0, 140, 213, .8);
     background-color: #008cd5;
+}
+.xui-myPromption-wrapper .xui-returnCommission .xui-btn-return .xui-a-valid-grey {
+    display: inline-block;
+    padding: 12px 18px;
+    border-radius: 5px;
+    box-shadow: 0px 0px 2px rgba(0, 0, 0, .2);
+    background-color: #ddd;
 }
 .xui-myPromption-wrapper .xui-returnCommission .xui-text-method {
     margin: 0 20px;
