--- a/weapp/market_tools/tools/distribution/templates/distribution/webapp/m_vip.html
+++ b/weapp/market_tools/tools/distribution/templates/distribution/webapp/m_vip.html
@@ -9,6 +9,131 @@
 {% block css%}
 <link type="text/css" rel="stylesheet" href="/markettools_static/distribution/css/m_weixin_style_v1.css">
 <style>
+/*css reset*/
+html{font-family: Arial, "Microsoft Yahei", "SimSun", sans-serif;-webkit-text-size-adjust:100%;-moz-text-size-adjust:100%;-ms-text-size-adjust:100%;}
+body{-webkit-overflow-scrolling:touch;margin:0;}
+ul{margin:0;padding:0;list-style:none;outline:none;}
+dl,dd{margin:0;}
+a{display:inline-block;margin:0;padding:0;text-decoration:none;background:transparent;outline:none;color:#000;}
+a:link,a:visited,a:hover,a:active{text-decoration:none;color:currentColor;}
+a,dt,dd{-webkit-touch-callout:none;-webkit-tap-highlight-color:transparent;}
+img{border:0;}
+p{margin:0;}
+input,button,select,textarea{margin:0;padding:0;border:0;outline:0;background-color:transparent;}
+
+/*公共样式*/
+html {
+    font-size: 62.5%;
+}
+.ml10 {
+    margin-left: 10px;
+}
+.ml15 {
+    margin-left: 15px;
+}
+.mb30 {
+    margin-bottom: 30px;
+}
+.pt30 {
+    padding-top: 30px;
+}
+.pt45 {
+    padding-top: 45px;
+}
+.pt50 {
+    padding-top: 50px;
+}
+.bg_fff {
+    background-color: #fff;
+}
+.xui-wrapper {
+    margin:0 auto;
+    width:100%;
+    max-width:750px;
+    height:100vh;
+    background-color:#efeff4;
+}
+.xui-wrapper img {
+    display: block;
+    width: 100%;
+}
+.xui-wrapper .xui-header {
+	overflow: hidden;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    max-width: 750px;
+    height: 40px;
+    font-size: 1.7rem;
+    text-align: center;
+    line-height: 40px;
+    color: #fff;
+    background-color: rgba(28,28,28,.9);
+    box-shadow: 0 1px 1px rgba(0,0,0,.1);
+    z-index: 999;
+}
+.xui-wrapper .xui-header .xui-back {
+	float:left;
+	margin-left: 15px;
+}
+.xui-wrapper .xui-header .xui-back i {
+	margin-right: 5px;
+}
+.xui-wrapper .xui-header .xui-menu {
+	float: right;
+	margin-right: 15px;
+}
+.xui-wrapper .xui-header .xui-menu i {
+	display: inline-block;
+	margin-right: 3px;
+	width: 5px;
+	height: 5px;
+	border-radius: 50%;
+	background-color: #fff;
+}
+/* m_vip 已有会员 */
+.xui-vip-wrapper .xui-vip-form  {
+    font-size: 1.6rem;
+    color: #333;
+}
+.xui-vip-wrapper .xui-vip-form .xui-vip-list {
+    margin-bottom: 10px;
+    padding: 10px;
+    border-top: 1px solid #dedede;
+    border-bottom: 1px solid #dedede;
+}
+.xui-vip-wrapper .xui-vip-list .xui-vip-header {
+    overflow: hidden;
+    padding: 10px 0;
+    border-bottom: 1px solid #dedede;
+}
+.xui-vip-wrapper .xui-vip-list .xui-vip-header .xui-nickname {
+    display: inline-block;
+}
+.xui-vip-wrapper .xui-vip-list .xui-vip-header span {
+    float: right;
+    font-size: 1.3rem;
+    line-height: 21px;
+    color: #999;
+}
+.xui-vip-wrapper .xui-vip-list .xui-vip-content {
+    overflow: hidden;
+    padding: 10px 10px 10px 0;
+    font-size: 1.4rem;
+    color: #333;
+}
+.xui-vip-wrapper .xui-vip-list .xui-vip-content span {
+    color: #008cd5;
+}
+.xui-vip-wrapper .xui-vip-list .xui-vip-content .xui-vip-commission {
+    display: inline-block;
+}
+.xui-vip-wrapper .xui-vip-list .xui-vip-content .xui-vip-consume {
+    float: right;
+}
+.xui-vip-wrapper .xui-vip-list .xui-vip-consume .xui-vip-num {
+    padding-top: 6px;
+}
 </style>
 {% endblock %}
 {% block content-panel %}
