--- a/weapp/market_tools/tools/distribution/templates/distribution/webapp/m_weixin_promotion.html
+++ b/weapp/market_tools/tools/distribution/templates/distribution/webapp/m_weixin_promotion.html
@@ -9,6 +9,202 @@
 {% block css%}
 <link type="text/css" rel="stylesheet" href="/markettools_static/distribution/css/m_weixin_style_v1.css">
 <style>
+/*css reset*/
+html{font-family: Arial, "Microsoft Yahei", "SimSun", sans-serif;-webkit-text-size-adjust:100%;-moz-text-size-adjust:100%;-ms-text-size-adjust:100%;}
+body{-webkit-overflow-scrolling:touch;margin:0;}
+ul{margin:0;padding:0;list-style:none;outline:none;}
+dl,dd{margin:0;}
+a{display:inline-block;margin:0;padding:0;text-decoration:none;background:transparent;outline:none;color:#000;}
+a:link,a:visited,a:hover,a:active{text-decoration:none;color:currentColor;}
+a,dt,dd{-webkit-touch-callout:none;-webkit-tap-highlight-color:transparent;}
+img{border:0;}
+p{margin:0;}
+input,button,select,textarea{margin:0;padding:0;border:0;outline:0;background-color:transparent;}
+
+/*公共样式*/
+html {
+    font-size: 62.5%;
+}
+.ml10 {
+    margin-left: 10px;
+}
+.ml15 {
+    margin-left: 15px;
+}
+.mb30 {
+    margin-bottom: 30px;
+}
+.pt30 {
+    padding-top: 30px;
+}
+.pt45 {
+    padding-top: 45px;
+}
+.pt50 {
+    padding-top: 50px;
+}
+.bg_fff {
+    background-color: #fff;
+}
+.xui-wrapper {
+    margin:0 auto;
+    width:100%;
+    max-width:750px;
+    height:100vh;
+    background-color:#efeff4;
+}
+.xui-wrapper img {
+    display: block;
+    width: 100%;
+}
+.xui-wrapper .xui-header {
+	overflow: hidden;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    max-width: 750px;
+    height: 40px;
+    font-size: 1.7rem;
+    text-align: center;
+    line-height: 40px;
+    color: #fff;
+    background-color: rgba(28,28,28,.9);
+    box-shadow: 0 1px 1px rgba(0,0,0,.1);
+    z-index: 999;
+}
+.xui-wrapper .xui-header .xui-back {
+	float:left;
+	margin-left: 15px;
+}
+.xui-wrapper .xui-header .xui-back i {
+	margin-right: 5px;
+}
+.xui-wrapper .xui-header .xui-menu {
+	float: right;
+	margin-right: 15px;
+}
+.xui-wrapper .xui-header .xui-menu i {
+	display: inline-block;
+	margin-right: 3px;
+	width: 5px;
+	height: 5px;
+	border-radius: 50%;
+	background-color: #fff;
+}
+/* m_weixin_promotion 二维码推广 */
+.xui-promption-wrapper {
+    background-color: #fff;
+}
+.xui-promption-wrapper .xui-text-area {
+    font-size: 1.6rem;
+    text-align: center;
+    font-weight: 700;
+    color: #333;
+}
+.xui-promption-wrapper .xui-qrCode-content {
+    position: relative;
+	width: 100%;
+    background: url('/markettools_static/distribution/styles/images/promotion-bg.png');
+    background-size: 120px;
+}
+.xui-promption-wrapper .xui-qrCode-bg {
+    display: block;
+    position: relative;
+    width: 100%;
+}
+.xui-promption-wrapper .xui-qrCode-content:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 50%;
+    width: 0;
+    height: 0;
+    border-left: 12px solid transparent;
+    border-right: 12px solid transparent;
+    border-top: 15px solid #fff;
+    -webkit-transform: translate(-50%, 0);
+    -moz-transform: translate(-50%, 0);
+    -ms-transform: translate(-50%, 0);
+    -o-transform: translate(-50%, 0);
+    transform: translate(-50%, 0);
+}
+.xui-promption-wrapper .xui-qrCode-content .icon-down {
+    position: absolute;
+    display: block;
+    top: 25px;
+    left: 50%;
+    width: 14%;
+    height: 6%;
+    background: url("/markettools_static/distribution/images/promotion-icon.png") no-repeat;
+    background-size: 55%;
+    -webkit-transform: translate(-28%, 0);
+    -moz-transform: translate(-28%, 0);
+    -ms-transform: translate(-28%, 0);
+    -o-transform: translate(-28%, 0);
+    transform: translate(-28%, 0);
+}
+.xui-promption-wrapper .xui-qrCode-content .icon-moveDown {
+    -webkit-animation: arrowMoveDown 1s linear infinite alternate;
+    -moz-animation: arrowMoveDown 1s linear infinite alternate;
+    -ms-animation: arrowMoveDown 1s linear infinite alternate;
+    -o-animation: arrowMoveDown 1s linear infinite alternate;
+    animation: arrowMoveDown 1s linear infinite alternate;
+}
+.xui-promption-wrapper .xui-qrCode-content .xui-quCode-box {
+    display: inline-block;
+    position: relative;
+    margin-top: 148px;
+    margin-left: 50%;
+    padding: 14px;
+    width: 118px;
+    height: 118px;
+    background-color: #fff;
+    -webkit-transform: translate(-50%, 0);
+    -moz-transform: translate(-50%, 0);
+    -ms-transform: translate(-50%, 0);
+    -o-transform: translate(-50%, 0);
+    transform: translate(-50%, 0);
+    z-index: 5;
+}
+.xui-promption-wrapper .xui-qrCode-content .xui-shadow-box {
+    position: absolute;
+    top: 80px;
+    left: 50%;
+    margin-left: -140px;
+    width: 280px;
+    opacity: .7;
+    /*-webkit-transform: translate(-50%, 0);
+    -moz-transform: translate(-50%, 0);
+    -ms-transform: translate(-50%, 0);
+    -o-transform: translate(-50%, 0);
+    transform: translate(-50%, 0);*/
+}
+.xui-promption-wrapper .xui-qrCode-content .xui-nickname {
+    padding-top: 30px;
+    font-size: 1.9rem;
+    text-align: center;
+    color: #fff;
+}
+.xui-promption-wrapper .xui-qrCode-content .xui-slogan {
+    margin: 0 2rem;
+    padding: 30px 0 196px;
+}
+@-webkit-keyframes arrowMoveDown {
+    0% { margin-top: 0px; }
+    100% { margin-top: 14px; }
+}
+@-moz-keyframes arrowMoveDown {
+    0% { margin-top: 0px; }
+    100% { margin-top: 14px; }
+}
+@-ms-keyframes arrowMoveDown {
+    0% { margin-top: 0px; }
+    100% { margin-top: 14px; }
+}
+@keyframes arrowMoveDown {
+    0% { margin-top: 0px; }
+    100% { margin-top: 14px; }
+}
 </style>
 {% endblock %}
 {% block content-panel %}
