--- a/weapp/market_tools/tools/distribution/templates/distribution/webapp/m_my_promotion.html
+++ b/weapp/market_tools/tools/distribution/templates/distribution/webapp/m_my_promotion.html
@@ -6,293 +6,16 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
-{% block css%}
+{% block css %}
 <link type="text/css" rel="stylesheet" href="/markettools_static/distribution/css/m_weixin_style_v1.css">
 <style>
-/*css reset*/
-html{font-family: Arial, "Microsoft Yahei", "SimSun", sans-serif;-webkit-text-size-adjust:100%;-moz-text-size-adjust:100%;-ms-text-size-adjust:100%;}
-body{-webkit-overflow-scrolling:touch;margin:0;}
-ul{margin:0;padding:0;list-style:none;outline:none;}
-dl,dd{margin:0;}
-a{display:inline-block;margin:0;padding:0;text-decoration:none;background:transparent;outline:none;color:#000;}
-a:link,a:visited,a:hover,a:active{text-decoration:none;color:currentColor;}
-a,dt,dd{-webkit-touch-callout:none;-webkit-tap-highlight-color:transparent;}
-img{border:0;}
-p{margin:0;}
-input,button,select,textarea{margin:0;padding:0;border:0;outline:0;background-color:transparent;}
-
-/*公共样式*/
-html {
-    font-size: 62.5%;
-}
-.ml10 {
-    margin-left: 10px;
-}
-.ml15 {
-    margin-left: 15px;
-}
-.mb30 {
-    margin-bottom: 30px;
-}
-.pt30 {
-    padding-top: 30px;
-}
-.pt45 {
-    padding-top: 45px;
-}
-.pt50 {
-    padding-top: 50px;
-}
-.bg_fff {
-    background-color: #fff;
-}
-.xui-wrapper {
-    margin:0 auto;
-    width:100%;
-    max-width:750px;
-    height:100vh;
-    background-color:#efeff4;
-}
-.xui-wrapper img {
-    display: block;
-    width: 100%;
-}
-.xui-wrapper .xui-header {
-	overflow: hidden;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    max-width: 750px;
-    height: 40px;
-    font-size: 1.7rem;
-    text-align: center;
-    line-height: 40px;
-    color: #fff;
-    background-color: rgba(28,28,28,.9);
-    box-shadow: 0 1px 1px rgba(0,0,0,.1);
-    z-index: 999;
-}
-.xui-wrapper .xui-header .xui-back {
-	float:left;
-	margin-left: 15px;
-}
-.xui-wrapper .xui-header .xui-back i {
-	margin-right: 5px;
-}
-.xui-wrapper .xui-header .xui-menu {
-	float: right;
-	margin-right: 15px;
-}
-.xui-wrapper .xui-header .xui-menu i {
-	display: inline-block;
-	margin-right: 3px;
-	width: 5px;
-	height: 5px;
-	border-radius: 50%;
-	background-color: #fff;
-}
-/* m_my_promotion 推广分销*/
-.xui-myPromption-wrapper .xui-returnCommission {
-    margin: 0 10px;
-    color: #333;
-}
-.xui-myPromption-wrapper .xui-returnCommission:before {
-    content: "";
-    position: absolute;
-    top: 40px;
-    left: 0;
-    width: 100%;
-    height: 10px;
-    border-bottom: 1px solid #dedede;
-    background-color: #efeff4;
-}
-.xui-myPromption-wrapper .xui-returnCommission .xui-message {
-    padding: 10px 0;
-    border-bottom: 1px solid #dedede;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-}
-.xui-myPromption-wrapper .xui-returnCommission .xui-icon-person {
-    display: inline-block;
-    vertical-align: middle;
-    width: 47px;
-    height: 47px;
-    background: #fff url('/markettools_static/distribution/images/myPromotion-icon-person.png') no-repeat;
-    background-size: 47px;
-}
-.xui-myPromption-wrapper .xui-returnCommission .xui-message span {
-    display: inline-block;
-    vertical-align: middle;
-    font-size: 1.5rem;
-}
-.xui-myPromption-wrapper .xui-returnCommission .xui-process {
-    position: relative;
-    display: inline-block;
-    vertical-align: middle;
-    padding: 28px 0 12px;
-    width: 82%;
-}
-.xui-myPromption-wrapper .xui-process .xui-icon-flag {
-    position: absolute;
-    top: 10px;
-    left: 0;
-    width: 12px;
-    height: 18px;
-    background-size: 11px;
-}
-.xui-myPromption-wrapper .xui-process .xui-process-static {
-    width: 100%;
-    height: 15px;
-    border-radius: 10px;
-    box-shadow: 0 0 5px rgba(0, 198, 255,.6);
-    background-color: rgba(0, 198, 255,.6);
-}
-.xui-myPromption-wrapper .xui-process .xui-process-active {
-    position: absolute;
-    top: 28px;
-    left: 0;
-    width: 0;
-    height: 12px;
-    border: 1px solid #4dafe2;
-    border-radius: 10px;
-    background-image: linear-gradient(45deg, transparent 0rem, transparent 0.8rem, #4dafe2 0.9rem, #4dafe2 2.1rem, transparent 2.1rem, transparent 2.9rem, #4dafe2 3.1rem);
-    background-color: #008cd5;
-    background-size: 25px 38px;
-    box-shadow: 1px 1px 5px rgba(0, 140, 213, .8);
-    -webkit-animation: process 750ms infinite linear;
-    -moz-animation: process 750ms infinite linear;
-    -ms-animation: process 750ms infinite linear;
-    animation: process 750ms infinite linear;
-}
-.xui-myPromption-wrapper .xui-process .xui-process-active:after {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    height: 100%;
-    border-radius: 10px;
-    background-image: linear-gradient(to bottom, #4dafe2, rgba(0, 140, 213, .6) 15%, transparent 60%, #4dafe2);
-}
-.xui-myPromption-wrapper .xui-returnCommission .xui-total-money {
-    display: inline-block;
-    padding-top: 10px;
-    vertical-align: middle;
-}
-.xui-myPromption-wrapper .xui-text {
-    padding-top: 10px;
-    font-size: 1.5rem;
-    color: #333;
-}
-.xui-myPromption-wrapper .xui-text-num {
-    margin-left: 4px;
-    font-size: 1.5rem;
-    color: #f10000;
-}
-.xui-myPromption-wrapper .xui-returnCommission .xui-btn-return {
-    display: block;
-    margin-top: 20px;
-    font-size: 1.5rem;
-    text-align: center;
-    color: #fff;
-}
-.xui-myPromption-wrapper .xui-returnCommission .xui-btn-return .xui-a-valid-blue {
-    display: inline-block;
-    padding: 12px 18px;
-    border: 1px solid #008cd5;
-    border-radius: 5px;
-    box-shadow: 1px 1px 5px rgba(0, 140, 213, .8);
-    background-color: #008cd5;
-}
-.xui-myPromption-wrapper .xui-returnCommission .xui-btn-return .xui-a-valid-grey {
-    display: inline-block;
-    padding: 12px 18px;
-    border-radius: 5px;
-    box-shadow: 0px 0px 2px rgba(0, 0, 0, .2);
-    background-color: #ddd;
-}
-.xui-myPromption-wrapper .xui-returnCommission .xui-text-method {
-    margin: 0 20px;
-    padding-bottom: 20px;
-    text-align: center;
-}
-.xui-myPromption-wrapper .xui-returnCommission .xui-text-day {
-    font-size: 1.5rem;
-    color: #008cd5;
-}
-.xui-myPromption-wrapper .xui-mainContain {
-    margin-bottom: 10px;
-    border-bottom: 1px solid #dedede;
-}
-.xui-myPromption-wrapper .xui-link {
-    margin-bottom: 10px;
-    font-size: 1.4rem;
-    color: #333;
-    border-top: 1px solid #dedede;
-}
-.xui-myPromption-wrapper .xui-link-list {
-    overflow: hidden;
-    padding: 15px 0;
-    border-bottom: 1px solid #dedede;
-}
-.xui-myPromption-wrapper .xui-link-list a {
-    display: block;
-    margin: 0 10px;
-}
-.xui-myPromption-wrapper .xui-link-list span {
-    display: inline-block;
-    float: right;
-}
-.xui-myPromption-wrapper .xui-explain {
-    position: relative;
-    padding: 20px 10px 30px;
-    font-size: 1.3rem;
-    color: #666; 
-}
-.xui-myPromption-wrapper .xui-explain:after {
-    content: "";
-    display: inline-block;
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: 15px;
-    border-top: 1px solid #dedede;
-    background-color: #efeff4;
-}
-.xui-myPromption-wrapper .xui-explain .xui-explain-header {
-    margin-bottom: 10px;
-    font-size: 1.5rem;
-    color: #333;
-}
-.xui-myPromption-wrapper .xui-explain .xui-explain-text {
-    line-height: 1.4rem;
-}
 .xui-icon-flag {
 	background: url('{{ user_icon }}') no-repeat;
-}
-@-webkit-keyframes process {
-    0% { background-position: 0 0; }
-    100% { background-position: 2em 0; }
-}
-@-moz-keyframes process {
-    0% { background-position: 0 0; }
-    100% { background-position: 2em 0; }
-}
-@-ms-keyframes process {
-    0% { background-position: 0 0; }
-    100% { background-position: 2em 0; }
-}
-@keyframes process {
-    0% { background-position: 0 0; }
-    100% { background-position: 2em 0; }
 }
 </style>
 {% endblock %}
 {% block content-panel %}
-<div class="xui-wrapper xui-process-wrapper">
+<div class="xui-wrapper xui-myPromption-wrapper">
 	<div class="xui-mainContain pt50 bg_fff">
 		<div class="xui-returnCommission">
 			<div class="xui-message">
