--- a/weapp/market_tools/tools/distribution/css/m_weixin_style_v1.css
+++ b/weapp/market_tools/tools/distribution/css/m_weixin_style_v1.css
@@ -24,14 +24,14 @@ html {
 .mb30 {
     margin-bottom: 30px;
 }
+.pt10 {
+    padding-top: 10px;
+}
 .pt30 {
     padding-top: 30px;
 }
 .pt45 {
     padding-top: 45px;
-}
-.pt50 {
-    padding-top: 50px;
 }
 .bg_fff {
     background-color: #fff;
@@ -269,7 +269,7 @@ html {
 .xui-myPromption-wrapper .xui-returnCommission:before {
     content: "";
     position: absolute;
-    top: 40px;
+    top: 0;
     left: 0;
     width: 100%;
     height: 10px;
