--- a/weapp/mall/templates/mall/editor/product_pool.html
+++ b/weapp/mall/templates/mall/editor/product_pool.html
@@ -68,6 +68,7 @@
         <thead>
             <tr>
                 <th width="250">商品信息</th>
+                <th width="100">分类</th>
                 <th width="100">供货商</th>
                 <th width="55">商品价格</th>
                 <th width="50">库存</th>
@@ -103,6 +104,7 @@
                             </div>
                         </div>
                     </td>
+                    <td></td>
                     <td>
                         ${product.store_name}
                     </td>
