1、修正图片链接；

--- a/weapp/market_tools/tools/distribution/templates/distribution/webapp/m_my_promotion.html
+++ b/weapp/market_tools/tools/distribution/templates/distribution/webapp/m_my_promotion.html
@@ -9,8 +9,11 @@
 {% block css %}
 <link type="text/css" rel="stylesheet" href="/markettools_static/distribution/css/m_weixin_style_v1.css">
 <style>
-.xui-icon-flag {
+.xui-icon-person {
 	background: url('{{ user_icon }}') no-repeat;
+}
+.xui-icon-flag {
+	background: url('/markettools_static/distribution/images/myPromotion-icon-flag.png') no-repeat;
 }
 </style>
 {% endblock %}
