--- a/weapp/market_tools/tools/distribution/templates/distribution/webapp/m_weixin_promotion.html
+++ b/weapp/market_tools/tools/distribution/templates/distribution/webapp/m_weixin_promotion.html
@@ -22,13 +22,14 @@
 		<div class="xui-qrCode-content">
 			<i class="icon-down icon-moveDown"></i>
 			<div class="xui-quCode-box">
-				<img src="{{ weixin_code }}" />
+				<!-- <img src="{{ weixin_code }}" /> -->
+				<img src="/markettools_static/distribution/images/promotion-shadow.png" />
 			</div>
 			<div class="xui-shadow-box">
-				<img src="styles/images/promotion-shadow.png" />
+				<img src="/markettools_static/distribution/images/promotion-shadow.png" />
 			</div>
 			<p class="xui-nickname">{{ nick_name }}</p>
-			<div class="xui-slogan"><img src="styles/images/promotion-slogan.png" /></div>
+			<div class="xui-slogan"><img src="/markettools_static/distribution/images/promotion-slogan.png" /></div>
 		</div>
 	</div>
 </div>
