--- a/weapp/apps/customerized_apps/scanlottery/templates/webapp/m_scanlottery_page.html
+++ b/weapp/apps/customerized_apps/scanlottery/templates/webapp/m_scanlottery_page.html
@@ -190,9 +190,9 @@
         });
 
         //扫码
-        // wx.ready(function(){
+        wx.ready(function(){
             $('.wa-guide-scan').on('click' ,scanQrcode);
-        // });
+        });
 
         //立即抽奖
         $('.wa-submit').on('click', function(){
