--- a/weapp/apps/customerized_apps/scanlottery/templates/webapp/m_scanlottery.html
+++ b/weapp/apps/customerized_apps/scanlottery/templates/webapp/m_scanlottery.html
@@ -218,7 +218,7 @@
             if(result == '一等奖'){
                 this.$el.addClass('wui-first-prize');
                 this.$title.html('').hide();
-                this.$contentHeader.html("恭喜您获得迪士尼门票一张！");
+                this.$contentHeader.html("");
                 this.$closeBtn.show();
                 this.$retryBtn.hide();
                 this.$userCenter.hide();
