--- a/weapp/apps/customerized_apps/scanlottery/templates/webapp/m_scanlottery_page.html
+++ b/weapp/apps/customerized_apps/scanlottery/templates/webapp/m_scanlottery_page.html
@@ -204,9 +204,9 @@
         });
 
         //扫码
-        // wx.ready(function(){
+        wx.ready(function(){
             $('.wa-guide-scan').on('click' ,scanQrcode);
-        // });
+        });
 
         //立即抽奖
         $('.wa-submit').on('click', function(){
@@ -255,30 +255,30 @@
     });
 
     function scanQrcode(){
-        // wx.scanQRCode({
-        //     needResult: 1, // 默认为0，扫描结果由微信处理，1则直接返回扫描结果，
-        //     scanType: ["qrCode"], // 可以指定扫二维码还是一维码，默认二者都有
-        //     success: function (res) {
-        //         var result = res.resultStr; // 当needResult 为 1 时，扫码返回的结果
-        //         scanCode = result.substr(result.length - 20);
-        //         W.getApi().call({
-        //             app: 'm/apps/scanlottery',
-        //             resource: 'scan_code_test',
-        //             method: 'get',
-        //             args: {
-        //                 webapp_owner_id: W.webappOwnerId,
-        //                 scan_code: scanCode
-        //             },
-        //             success: function(data){
+        wx.scanQRCode({
+            needResult: 1, // 默认为0，扫描结果由微信处理，1则直接返回扫描结果，
+            scanType: ["qrCode"], // 可以指定扫二维码还是一维码，默认二者都有
+            success: function (res) {
+                var result = res.resultStr; // 当needResult 为 1 时，扫码返回的结果
+                scanCode = result.substr(result.length - 20);
+                W.getApi().call({
+                    app: 'm/apps/scanlottery',
+                    resource: 'scan_code_test',
+                    method: 'get',
+                    args: {
+                        webapp_owner_id: W.webappOwnerId,
+                        scan_code: scanCode
+                    },
+                    success: function(data){
                         $('.wa-guide').hide();
                         $('.wa-scanlottery-page').show();
-        //             },
-        //             error: function(resp){
-        //                 wuiAlert(resp.errMsg);
-        //             }
-        //         });
-        //     }
-        // });
+                    },
+                    error: function(resp){
+                        wuiAlert(resp.errMsg);
+                    }
+                });
+            }
+        });
     }
 </script>
 {% endblock %}
